Copyright to UpCloo Ltd.

--- a/wp-upcloo/views/upcloo-js-sdk.phtml
+++ b/wp-upcloo/views/upcloo-js-sdk.phtml
@@ -8,7 +8,7 @@
         n.parentNode.insertBefore(s,n);
 })(this,{"pageId" : "<?php echo $this->permalink; ?>","siteKey" : "<?php echo $this->sitekey; ?>",
     "opts":{
-        "sendBeacon":false,
+        "sendBeacon":true,
         "widget":{"opts":{"headline":"<?php echo $this->headline; ?>"}}
     }
 });
