--- a/wp-upcloo/views/upcloo-js-sdk.phtml
+++ b/wp-upcloo/views/upcloo-js-sdk.phtml
@@ -1,18 +1,30 @@
+<div class='upcloo-suggest-widget'></div>
 <script>
-(function(g,opts) {
-     g.upCloo = g.upCloo || {};
-     g.upCloo.bootStrap = opts;
-    var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
-        s.src = '//repository.upcloo.com/a/u.js'
-    var n = document.getElementsByTagName('script')[0];
-        n.parentNode.insertBefore(s,n);
-})(this,{
-    "pageId" : "<?php echo $this->permalink; ?>",
-    "siteKey" : "<?php echo $this->sitekey; ?>",
-    <?php echo (($this->vsitekey) ? "\"vsitekey\":\"{$this->vsitekey}\"" : ""); ?>
-    "opts":{
-        "sendBeacon":true,
-        "widget":{"opts":{"headline":"<?php echo $this->headline; ?>"}}
-    }
-});
+(function(g,d,id){
+  upCloo = g.upCloo || []; 
+  upCloo.push(
+    {
+        "pageId" : "<?php echo $this->permalink; ?>",
+        "siteKey" : "<?php echo $this->sitekey; ?>",
+        <?php echo (($this->vsitekey) ? "\"vsitekey\":\"{$this->vsitekey}\"" : ""); ?>,
+        "opts": {
+            "sendBeacon":true,
+            "widget":{
+                "opts":{
+                    "headline":"<?php echo $this->headline; ?>",
+                    "limit":<?php echo $this->limit; ?>,
+                    "theme":"<?php echo $this->theme; ?>",
+                    "type":"<?php echo $this->type"; ?>",
+                    "showImage": <?php echo $this->image; ?>
+                }
+            }
+        }
+    }
+  );
+  var s = d.createElement('script') , n = d.getElementsByTagName('script')[0]; 
+  s.type = 'text/javascript';
+  s.async = true;s.id = id;
+  s.src = '//repository.upcloo.com/a/u2.js';
+  !d.getElementById(id) ? n.parentNode.insertBefore(s,n) :false;
+})(this,document,'upcloo_js_sdk')
 </script>
