--- a/wp-upcloo/views/upcloo-js-sdk.phtml
+++ b/wp-upcloo/views/upcloo-js-sdk.phtml
@@ -13,7 +13,8 @@
             "limit":<?php echo $this->limit; ?>,
             "theme":"<?php echo $this->theme; ?>",
             "type":"<?php echo $this->type; ?>",
-            "showImage": <?php echo $this->image; ?>
+            "showImage": <?php echo $this->image; ?>,
+            "pos": "<?php echo $this->position; ?>"
         }
     }
   );
