--- a/wp-upcloo/views/upcloo-js-sdk.phtml
+++ b/wp-upcloo/views/upcloo-js-sdk.phtml
@@ -21,7 +21,7 @@
   var s = d.createElement('script') , n = d.getElementsByTagName('script')[0]; 
   s.type = 'text/javascript';
   s.async = true;s.id = id;
-  s.src = '//repository.upcloo.com/a/u.js';
+  s.src = '//r.upcloo.com/a/u.js';
   !d.getElementById(id) ? n.parentNode.insertBefore(s,n) :false;
 })(this,document,'upcloo_js_sdk')
 </script>
