Added personal CSS section

--- a/wp-upcloo/views/upcloo-js-sdk.phtml
+++ b/wp-upcloo/views/upcloo-js-sdk.phtml
@@ -25,3 +25,6 @@
   !d.getElementById(id) ? n.parentNode.insertBefore(s,n) :false;
 })(this,document,'upcloo_js_sdk')
 </script>
+<style type="text/css">
+<?php echo get_option("UPCLOO_CSS_INLINE"); ?>
+</style>
