Added extra options

--- a/wp-upcloo/views/upcloo-js-sdk.phtml
+++ b/wp-upcloo/views/upcloo-js-sdk.phtml
@@ -14,7 +14,10 @@
             "theme":"<?php echo $this->theme; ?>",
             "type":"<?php echo $this->type; ?>",
             "showImage": <?php echo $this->image; ?>,
-            "pos": "<?php echo $this->position; ?>"
+            "pos": "<?php echo $this->position; ?>",
+            "popIn": <?php echo $this->popIn,
+            "popOut": <?php echo $this->popOut,
+            "defaultImage": <?php echo $this->defaultImage; ?>
         }
     }
   );
