Image default fixes

--- a/wp-upcloo/views/upcloo-js-sdk.phtml
+++ b/wp-upcloo/views/upcloo-js-sdk.phtml
@@ -15,8 +15,8 @@
             "type":"<?php echo $this->type; ?>",
             "showImage": <?php echo $this->image; ?>,
             "pos": "<?php echo $this->position; ?>",
-            "popIn": <?php echo $this->popIn,
-            "popOut": <?php echo $this->popOut,
+            "popIn": <?php echo $this->popIn;?>,
+            "popOut": <?php echo $this->popOut;?>,
             "defaultImage": <?php echo $this->defaultImage; ?>
         }
     }
