added GAN tracking

--- a/wp-upcloo/views/upcloo-js-sdk.phtml
+++ b/wp-upcloo/views/upcloo-js-sdk.phtml
@@ -17,7 +17,8 @@
             "pos": "<?php echo $this->position; ?>",
             "popIn": <?php echo $this->popIn;?>,
             "popOut": <?php echo $this->popOut;?>,
-            "defaultImage": "<?php echo $this->defaultImage; ?>"
+            "defaultImage": "<?php echo $this->defaultImage; ?>",
+            "ga": <?php echo $this->ga; ?>
         }
     }
   );
