--- a/wp-upcloo/views/upcloo-js-sdk.phtml
+++ b/wp-upcloo/views/upcloo-js-sdk.phtml
@@ -1,7 +1,7 @@
 <?php
     if (get_option(UPCLOO_MANUAL_PLACEHOLDER) != true) :
 ?>
-<div class='upcloo-widget' id="<?php echo get_option(UPCLOO_CONFIG_ID, "upcloo_1000")?>"></div>
+<div class='upcloo-widget' id="<?php echo $this->configId?>"></div>
 <?php
     endif;
 ?>
