--- a/wp-upcloo/views/upcloo-js-sdk.phtml
+++ b/wp-upcloo/views/upcloo-js-sdk.phtml
@@ -12,7 +12,7 @@
     {
         "permalink" : "<?php echo $this->permalink; ?>",
         "siteKey" : "<?php echo $this->sitekey; ?>",
-        <?php echo (($this->vsitekey) ? "\"vsitekey\":\"{$this->vsitekey}\"," : ""); ?>
+        <?php echo (($this->vsitekey) ? "\"vSiteKey\":\"{$this->vsitekey}\"" : ""); ?>
     }
   );
   var s = d.createElement('script') , n = d.getElementsByTagName('script')[0]; 
