--- a/upcloo-altervista/views/upcloo-js-sdk.phtml
+++ b/upcloo-altervista/views/upcloo-js-sdk.phtml
@@ -7,15 +7,20 @@
 ?>
 <script type="text/javascript">
 (function(g,d,id){
-  upCloo = g.upCloo || []; 
+  upCloo = g.upCloo || [];
   upCloo.push(
     {
         "permalink" : "<?php echo $this->permalink; ?>",
         "siteKey" : "<?php echo $this->sitekey; ?>"
         <?php echo (($this->vsitekey) ? ",\"vSiteKey\":\"{$this->vsitekey}\"" : ""); ?>
+        <?php if (trim(get_option(UPCLOO_ALTERVISTA_BOX_TITLE)) != '') : ?>
+        , "options": {
+            "headline": "<?php echo get_option(UPCLOO_ALTERVISTA_BOX_TITLE)?>"
+        }
+        <?php endif; ?>
     }
   );
-  var s = d.createElement('script') , n = d.getElementsByTagName('script')[0]; 
+  var s = d.createElement('script') , n = d.getElementsByTagName('script')[0];
   s.type = 'text/javascript';
   s.async = true;s.id = id;
   s.src = '//r.upcloo.com/a/a.js';
